--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -136,4 +136,24 @@
     padding-top: 10px;
 }
 
+#credentials_div {
+    float:right;
+    padding: 3px;
+
+    label {
+        display: block;
+        float: left;
+    }
+
+    #client_id, #client_secret {
+      display: inline-block;
+      float: right;
+    }
+    #log_in_or_out {
+      display: inline-block;
+      float: left;
+    }
+
+}
+
 }
