--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -593,6 +593,17 @@
                                             text-decoration: underline;
                                         }
                                     }
+                                    span.nickname {
+                                        padding-left: 10px;
+                                        a {
+                                            color: red;
+                                            font-style: italic;
+                                            text-decoration: none;
+                                        }
+                                        a:hover {
+                                            text-decoration: underline;
+                                        }
+                                    }
                                     span.http_method {
                                         a {
                                             text-transform: uppercase;
