--- a/src/main/template/operation.handlebars
+++ b/src/main/template/operation.handlebars
@@ -9,6 +9,9 @@
           <span class='path'>
           <a href='#!/{{parentId}}/{{nickname}}' class="toggleOperation {{#if deprecated}}deprecated{{/if}}">{{path}}</a>
           </span>
+          <span class='nickname'>
+            <a href='#!/{{parentId}}/{{nickname}}' class="toggleOperation">{{{nickname}}}</a>
+          </span>
         </h3>
         <ul class='options'>
           <li>
@@ -77,7 +80,7 @@
             </tr>
             </thead>
             <tbody class="operation-status">
-            
+
             </tbody>
           </table>
           {{/if}}
