optionally show ruby method sigs

--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -154,6 +154,17 @@
       float: left;
     }
 
+    #language_div {
+        float:right;
+        padding: 10px;
+
+        #change_language {
+          display: inline-block;
+          float: left;
+        }
 }
+
+}
+
 
 }
