--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -596,8 +596,7 @@
                                     span.nickname {
                                         padding-left: 10px;
                                         a {
-                                            color: red;
-                                            font-style: italic;
+                                            color: black;
                                             text-decoration: none;
                                         }
                                         a:hover {
