--- a/src/main/template/operation.handlebars
+++ b/src/main/template/operation.handlebars
@@ -9,8 +9,8 @@
           <span class='path'>
           <a href='#!/{{parentId}}/{{nickname}}' class="toggleOperation {{#if deprecated}}deprecated{{/if}}">{{path}}</a>
           </span>
-          <span class='nickname'>
-            <a href='#!/{{parentId}}/{{nickname}}' class="toggleOperation">{{{nickname}}}</a>
+          <span class='nickname' hidden='hidden'>
+            <a href='#!/{{parentId}}/{{nickname}}' class="toggleOperation">{{{ruby_signature}}}</a>
           </span>
         </h3>
         <ul class='options'>
