--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -158,11 +158,16 @@
         float:right;
         padding: 10px;
 
+        #load_swagger {
+          display: inline-block;
+          float: left;
+        }
+
         #change_language {
           display: inline-block;
           float: left;
         }
-}
+    }
 
 }
 
