--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -216,15 +216,15 @@
         .signature-nav {
             a {
                 text-decoration: none;
-                color: #AAA;
+                color: black;
             }
             a:hover {
                 text-decoration: underline;
                 color: black;
             }
-            .selected {
-                color: black;
+            .selected, .selected:hover {
                 text-decoration: none;
+                color: #AAA;
             }
         }
         .propType {
@@ -603,7 +603,7 @@
                                             text-decoration: underline;
                                         }
                                     }
-                                    span.http_method {
+                                    span.http_method, span.sdk {
                                         a {
                                             text-transform: uppercase;
                                             text-decoration: none;
@@ -720,7 +720,7 @@
                                 background-color: #f9f2e9;
                                 border: 1px solid #f0e0ca;
                                 h3 {
-                                    span.http_method {
+                                    span.http_method, span.sdk {
                                         a {
                                             background-color: #c5862b;
                                         }
@@ -757,7 +757,7 @@
                                 border: 1px solid black;
                                 border-color: #ffd20f;
                                 h3 {
-                                    span.http_method {
+                                    span.http_method, span.sdk {
                                         a {
                                             text-transform: uppercase;
                                             background-color: #ffd20f;
@@ -794,7 +794,7 @@
                                 background-color: #f5e8e8;
                                 border: 1px solid #e8c6c7;
                                 h3 {
-                                    span.http_method {
+                                    span.http_method, span.sdk {
                                         a {
                                             text-transform: uppercase;
                                             background-color: #a41e22;
@@ -831,7 +831,7 @@
                                 background-color: #e7f6ec;
                                 border: 1px solid #c3e8d1;
                                 h3 {
-                                    span.http_method {
+                                    span.http_method, span.sdk {
                                         a {
                                             background-color: #10a54a;
                                         }
@@ -866,7 +866,7 @@
                                 background-color: #FCE9E3;
                                 border: 1px solid #F5D5C3;
                                 h3 {
-                                    span.http_method {
+                                    span.http_method, span.sdk {
                                         a {
                                             background-color: #D38042;
 
@@ -904,7 +904,7 @@
                                 background-color: #e7f0f7;
                                 border: 1px solid #c3d9ec;
                                 h3 {
-                                    span.http_method {
+                                    span.http_method, span.sdk {
                                         a {
                                             background-color: #0f6ab4;
                                         }
@@ -939,7 +939,7 @@
                                 background-color: #e7f0f7;
                                 border: 1px solid #c3d9ec;
                                 h3 {
-                                    span.http_method {
+                                    span.http_method, span.sdk {
                                         a {
                                             background-color: #0f6ab4;
                                         }
