show read-only for props. fix props display of arrays

--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -266,6 +266,9 @@
         .propOptKey {
             font-style: italic;
         }
+        .propReadOnlyKey {
+            font-style: italic;
+        }
         .description {
             .strong {
                 font-weight: bold;
