--- a/src/main/template/operation.handlebars
+++ b/src/main/template/operation.handlebars
@@ -13,20 +13,20 @@
             <a href='#!/{{parentId}}/{{nickname}}' class="toggleOperation {{#if deprecated}}deprecated{{/if}}">{{path}}</a>
           </span>
           <span class='sdk_fn_name sdk_header_element'>
-            <a href='#!/{{parentId}}/{{nickname}}' class="toggleOperation">{{{ruby_signature}}}</a>
+            <a href='#!/{{parentId}}/{{nickname}}' class="toggleOperation" {{#if deprecated}}deprecated{{/if}}>{{{ruby_signature}}}</a>
           </span>
         </h3>
-        <ul class='options'>
-          <li>
-            <a href='#!/{{parentId}}/{{nickname}}' class='toggleOperation nickname'>{{{summary}}}</a>
-          </li>
-        </ul>
         <span class='status'>
           <a href='#!/{{parentId}}/{{nickname}}'
              class="toggleOperation status_{{looker_status}}">
-            {{looker_status_text}}
+            {{{looker_status_text}}}
           </a>
         </span>
+        <ul class='options'>
+          <li>
+            <a href='#!/{{parentId}}/{{nickname}}' class='toggleOperation summary'>{{{summary}}}</a>
+          </li>
+        </ul>
       </div>
       <div class='content' id='{{parentId}}_{{nickname}}_content' style='display:none'>
         {{#if deprecated}}
