--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -670,7 +670,7 @@
                                     clear: none;
                                     float: right;
                                     width: auto;
-                                    margin: 0;
+                                    margin-right: 10px;
                                     padding: 0;
                                     a {
                                         color: white;
