--- a/src/main/template/main.handlebars
+++ b/src/main/template/main.handlebars
@@ -1,13 +1,18 @@
 <div class='info' id='api_info'>
   {{#if info}}
   <div class="info_title">{{info.title}}</div>
-  <div class="info_description">{{{info.description}}}</div>
+  <h2 data-toggle="collapse" data-target="#info_description">
+    <span type="button" class="glyphicon glyphicon-triangle-right" aria-hidden="true" ></span>
+    Overview
+  </h2>
+  <div class="info_description collapse in" id="info_description">{{{info.description}}}
   {{#if info.termsOfServiceUrl}}<div class="info_tos"><a href="{{info.termsOfServiceUrl}}">Terms of service</a></div>{{/if}}
   {{#if info.contact}}<div class='info_contact'><a href="mailto:{{info.contact.name}}">Contact Looker</a></div>{{/if}}
   {{#if info.license}}<div class='info_license'><a href='{{info.license.url}}'>{{info.license.name}}</a></div>{{/if}}
   {{/if}}
+  </div>
 </div>
-<div class='container' id='resources_container'>
+<div id='resources_container'>
   <ul id='resources'></ul>
 
   <div class="footer">
