--- a/src/main/template/resource.handlebars
+++ b/src/main/template/resource.handlebars
@@ -1,7 +1,9 @@
 <div class='heading'>
-  <h2>
-    <a href='#!/{{id}}' class="toggleEndpointList" data-id="{{id}}">{{name}}  {{#summary}} : {{/summary}}{{{summary}}}</a>
+  <h2 data-toggle="collapse" data-target='#{{id}}_endpoint_list'>
+    <span class="glyphicon glyphicon-triangle-right" />
+    <a href='#!/{{id}}' data-id="{{id}}">{{name}}  {{#summary}} : {{/summary}}{{{summary}}}</a>
   </h2>
+<!--
   <ul class='options'>
     <li>
       <a href='#!/{{id}}' id='endpointListTogger_{{id}}' class="toggleEndpointList" data-id="{{id}}">Show/Hide</a>
@@ -20,7 +22,8 @@
       <a href='{{url}}'>Raw</a>
     </li>{{/url}}
   </ul>
+-->
 </div>
-<ul class='endpoints' id='{{id}}_endpoint_list' style='display:none'>
+<ul class='endpoints collapse' id='{{id}}_endpoint_list'>
 
 </ul>
