--- a/src/main/template/main.handlebars
+++ b/src/main/template/main.handlebars
@@ -1,8 +1,7 @@
 <div class='info' id='api_info'>
   {{#if info}}
   <div class="info_title">{{info.title}}</div>
-  <h2 data-toggle="collapse" data-target="#info_description">
-    <span type="button" class="glyphicon glyphicon-triangle-right" aria-hidden="true" ></span>
+  <h2 data-toggle="collapse" data-target="#info_description" aria-expanded="true">
     Overview
   </h2>
   <div class="info_description collapse in" id="info_description">{{{info.description}}}
