--- a/src/main/template/resource.handlebars
+++ b/src/main/template/resource.handlebars
@@ -1,6 +1,5 @@
 <div class='heading'>
-  <h2 data-toggle="collapse" data-target='#{{id}}_endpoint_list'>
-    <span class="glyphicon glyphicon-triangle-right" />
+  <h2 data-toggle="collapse" data-target='#{{id}}_endpoint_list'  aria-expanded="false" class="collapsed">
     <a href='#!/{{id}}' data-id="{{id}}">{{name}}  {{#summary}} : {{/summary}}{{{summary}}}</a>
   </h2>
 <!--
