--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -688,6 +688,7 @@
                                     width: auto;
                                     margin-right: 10px;
                                     padding: 0;
+                                    box-sizing: content-box;
                                     a {
                                         color: white;
                                         text-decoration: none;
@@ -696,7 +697,7 @@
                                         display: inline-block;
                                         padding: 5px;
                                         margin-top: 8px;
-                                        width: 6px;
+                                        width: 15px;
                                         -moz-border-radius: 15px;
                                         -webkit-border-radius: 15px;
                                         -o-border-radius: 15px;
