--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -340,11 +340,14 @@
             margin-top: 10px;
         }
     }
-
     h2 {
+        font-family: "Droid Sans", sans-serif;
+        font-weight: bold;
         color: black;
         font-size: 1.3em;
         padding: 10px 0 10px 0;
+        cursor: pointer;
+        position: relative;
         a {
             color: black;
         }
@@ -356,6 +359,20 @@
                 color: #777777;
             }
         }
+    }
+    h2::before {
+        content:"\e252"; // glyphicon-triangle-right
+        position: absolute;
+        right: 101%;
+        font-family: 'Glyphicons Halflings';
+        font-size: 50%;
+        top: 35%;
+    }
+    h2.collapsed::before {
+        content:"\e250"; // glyphicon-triangle-down
+    }
+    .collapsing {
+        clear: both;
     }
 
     span.weak {
@@ -530,10 +547,10 @@
             }
 
             div.heading {
-                border: 1px solid transparent;
+                //border: 1px solid transparent;
                 float: none;
                 clear: both;
-                overflow: hidden;
+//                overflow: hidden;
                 display: block;
                 ul.options {
                     overflow: hidden;
@@ -585,13 +602,12 @@
                     display: block;
                     clear: none;
                     float: left;
-                    font-family: "Droid Sans", sans-serif;
-                    font-weight: bold;
                     a {
                         color: #999999;
                     }
                     a:hover {
                         color: black;
+                        text-decoration: none;
                     }
                 }
             }
@@ -603,7 +619,7 @@
                             clear: both;
                             overflow: hidden;
                             display: block;
-                            margin: 0 0 10px;
+                            margin: 0 0 1px;
                             padding: 0;
                             div.heading {
                                 float: none;
@@ -672,6 +688,7 @@
                                     width: auto;
                                     margin-right: 10px;
                                     padding: 0;
+                                    box-sizing: content-box;
                                     a {
                                         color: white;
                                         text-decoration: none;
@@ -680,7 +697,7 @@
                                         display: inline-block;
                                         padding: 5px;
                                         margin-top: 8px;
-                                        width: 6px;
+                                        width: 15px;
                                         -moz-border-radius: 15px;
                                         -webkit-border-radius: 15px;
                                         -o-border-radius: 15px;
