Show 'required' on model properties that are required

--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -266,6 +266,9 @@
         .propOptKey {
             font-style: italic;
         }
+        .propRequiredKey {
+            font-style: italic;
+        }
         .propReadOnlyKey {
             font-style: italic;
         }
