Fix expanded heading color flutter Color of heading was changing with mouse hover over section body. Heading color now pegged to black when heading is expanded.

--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -545,6 +545,10 @@
                 }
             }
 
+            div.heading h2[aria-expanded='true'] a {
+                color: black;
+            }
+
             &:last-child {
                 border-bottom: none;
             }
