--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -809,6 +809,9 @@
                                         }
                                     }
                                 }
+                                ol {
+                                    list-style-type: decimal;
+                                }
                             }
                         }
                         li.operation.put {
