Support array query params using multiline textareas

--- a/src/main/template/param.handlebars
+++ b/src/main/template/param.handlebars
@@ -19,12 +19,9 @@
 			<input type="file" name='{{name}}'/>
 			<div class="parameter-content-type" />
 		{{else}}
-			{{#if default}}
-				<input class='parameter' minlength='0' name='{{name}}' placeholder='' type='text' value='{{default}}'/>
-			{{else}}
-				<input class='parameter' minlength='0' name='{{name}}' placeholder='' type='text' value=''/>
-			{{/if}}
-		{{/if}}
+      {{#renderTextParam this}}
+      {{/renderTextParam}}
+    {{/if}}
 	{{/if}}
 
 </td>
